# hs_mlp

./: CHANGELOG.md  README.md  cabal.project  model.txt  model_sigmoid.txt  model_sign.txt  perceptron.cabal  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/install/x86_64-linux/6c24fa9160771461153267ed24106c91cc8535c5c0caf2e03038088a2cf6304b/9.6.7/lib/x86_64-linux-ghc-9.6.7/perceptron-0.1.0.0-JyM3HxfKAugC6CUTZY4zeM/: DataLoader.dyn_hi  DataLoader.hi  ModelSerializer.dyn_hi  ModelSerializer.hi  Perceptron.dyn_hi
.stack-work/install/x86_64-linux/6c24fa9160771461153267ed24106c91cc8535c5c0caf2e03038088a2cf6304b/9.6.7/pkgdb/: package.cache  perceptron-0.1.0.0-JyM3HxfKAugC6CUTZY4zeM.conf
app/: Main.hs
data/: prompts.txt  test.txt  train.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.8.4/: package.cache  perceptron-0.1.0.0-inplace.conf
dist-newstyle/packagedb/ghc-9.6.7/: package.cache  perceptron-0.1.0.0-inplace.conf
src/: DataLoader.hs  Evaluation.hs  ModelSerializer.hs  Perceptron.hs
